main/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: nginx-80
      port: 80
      protocol: TCP
      targetPort: nginx-80
  selector:
    app: frontend

---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: multitool-80
      port: 80
      protocol: TCP
      targetPort: multitool-80
  selector:
    app: backend
